--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -1,6 +1,6 @@
 .App {
   display: grid;
-  grid-template-columns: 800px 1fr; /* Sidebar width and main content */
+  grid-template-columns: minmax(550px, 30%) 1fr; /* Sidebar width and main content */
   grid-template-rows: auto 1fr; /* Header height and the rest */
   grid-template-areas:
     "header header"
@@ -67,7 +67,8 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  padding: 25px;
+  padding: 15px;
+  min-height: 0;
 }
 
 
@@ -268,6 +269,7 @@ td .status {
   position: relative;
   height: 100%;
   width: 100%;
+  min-height: 0;
 }
 
 /* Remove responsive table for desktop-first view */
